--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,14 @@
+<div class="row form-json-container">
+    <div class="col-sm-12">\
+        <div class="form-data-container">
+            <app-form-data></app-form-data>
+        </div>
+    </div>
+   
+</div>
 
-<app-form-data></app-form-data>
-
-
-
+<div class="row">
+    <div class="col-sm-12">
+        <app-person-table></app-person-table>
+    </div>
+</div>
