--- a/src/app/components/form-data/form-data.component.html
+++ b/src/app/components/form-data/form-data.component.html
@@ -4,7 +4,7 @@
 
     <div class="container form-container">
 
-      <form (ngSubmit)="onSubmit()" #personForm="ngForm">
+      <form (ngSubmit)="onSubmit(personData.rowidObject)" #personForm="ngForm">
 
         <div class="row">
 
@@ -13,14 +13,14 @@
           </div>
 
           <div class="col-8" style="float:right;display: flex; justify-content:flex-end;">
-            <button type="submit" class="btn btn-success" [disabled]="!personForm.form.valid">Save</button>
-            <button type="button" class="btn btn-primary" (click)="newPerson(); personForm.reset()">Add New</button>
+            <button type="submit" class="btn btn-success" style="margin-right:10px;" [disabled]="!personForm.form.valid">Save</button>
+            <button type="button" class="btn btn-primary" style="margin-right:10px;" (click)="newPerson(); personForm.reset()">Add New</button>
             <button type="button" class="btn btn-warning" (click)="resetPerson()">Reset</button>
           
           </div>
 
         </div>
-
+        <br>
         <div class="row">
 
           <div class="col-lg-4 col-md-6 col-sm-12">
