--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,8 +1,6 @@
 @import '../../../styles/colors';
+
+
 div.form-json-container{
-    min-height: 70vh;
-    div.form-data-container{
-        background-color: $background-primary-color;
-        font-size: 1em;
-    }
+    margin-bottom:20px;
 }
