--- a/src/app/components/form-data/form-data.component.scss
+++ b/src/app/components/form-data/form-data.component.scss
@@ -1,7 +1,25 @@
+@import '../../../styles/colors';
+
+
 .ng-valid[required], .ng-valid.required  {
     border-left: 5px solid #42A948; /* green */
   }
   
   .ng-invalid:not(form)  {
     border-left: 5px solid #a94442; /* red */
+  }
+
+  div.form-container{
+    background-color: $background-primary-color;
+    font-size: 0.9em;
+    min-height:100%;
+    max-height: 100%;
+    padding:15px;
+  }
+
+  div.json-container{
+    background-color: $background-primary-color;
+    font-size: 0.9em;
+    min-height:100%;
+    padding:15px;
   }
