--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -1,1 +1,31 @@
-<p>person-table works!</p>
+<div class="persons-table-container">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Display Name</th>
+                <th>Birth Date</th>
+                <th>Tax ID</th>
+                <th>Gen Suffix</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr 
+                (click)="selectPerson(person)" 
+                *ngFor="let person of persons;let i=index;"
+                [ngClass]="{'selected': person.selected}">
+                <td>{{person.rowidObject}}</td>
+                <td>{{person.firstName}}</td>
+                <td>{{person.lastName}}</td>
+                <td>{{person.displayName}}</td>
+                <td>{{person.birthdate}}</td>
+                <td>{{person.taxId}}</td>
+                <td>{{person.generationSuffixCd}}</td>
+               
+            </tr>
+          </tbody>
+    </table>
+</div>
