--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -1,4 +1,4 @@
-<div class="persons-table-container">
+<div class="persons-table-container card-box">
     <table class="table table-striped">
         <thead>
             <tr>
