--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@
 @import 'styles/animations';
 @import 'styles/colors';
 @import 'styles/theme';
+
+
+div.card-box{
+    border:2px solid grey;
+    border-radius: 5px;
+    box-shadow:  0px 0px 15px 3px #B8B8B8;
+}
