--- a/src/app/components/person-table/person-table.component.scss
+++ b/src/app/components/person-table/person-table.component.scss
@@ -12,5 +12,5 @@ tr{
     cursor: pointer;
 }
 tr.selected{
-    background-color: greenyellow !important;
+    background-color: #e8f4f8 !important;
 }
