--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -14,7 +14,7 @@ $background-secondary-color:#e9eef4;
 $background-secondary-color-dark:#0e2546;
 $background-secondary-color-funny:red;
 
-$text-primary-color:#454545;
+$text-primary-color:#ffffff;
 $text-primary-color-dark:#ffffff;
 $text-primary-color-funny:#1298d7;
 
