--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,5 +8,5 @@
 div.card-box{
     border:2px solid grey;
     border-radius: 5px;
-    box-shadow:  0px 0px 15px 3px #B8B8B8;
+    box-shadow: 0px 0px 10px 0px grey;
 }
