added en and fr

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
-<div class="route-container">
-    <router-outlet></router-outlet>
+<div class="app-container">
+    <div class="header-container">
+        <ul>
+            <li routerLink="/metadata">
+                Metadata
+            </li>
+            <li>
+                French &nbsp; <input style="cursor: pointer;" type="checkbox" [(ngModel)]="isFrench" (change)="checkValue(isFrench?true:false)" />
+            </li>
+        <!--    <li>
+                Dark Mode &nbsp; <input style="cursor: pointer;" type="checkbox" [(ngModel)]="isDark" (change)="checkBg(isDark?true:false)" />
+            </li> -->
+        </ul>
+    </div>
+
+    <div class="route-container">
+        <router-outlet></router-outlet>
+    </div>
+
 </div>
