--- a/src/app/components/form-data/form-data.component.scss
+++ b/src/app/components/form-data/form-data.component.scss
@@ -19,7 +19,7 @@
 
     div.entity-header{
       height:50px;
-      background:linear-gradient(135deg, #184e68 0%,#184e68 100%);
+      background-color:$accent-color;
       padding:10px 0px;
       font-size:1.2em;
       color: $text-primary-color;
