--- a/src/app/components/form-data/form-data.component.html
+++ b/src/app/components/form-data/form-data.component.html
@@ -15,13 +15,15 @@
         <br>
         <div class="row">
 
-         
+
 
           <div class="col-12" style="float:right;display: flex; justify-content:flex-end;">
-            <button type="submit" class="btn btn-success" style="margin-right:10px;" [disabled]="!personForm.form.valid">{{ 'save' |translate}}</button>
-            <button type="button" class="btn btn-primary" style="margin-right:10px;" (click)="newPerson(); personForm.reset()">{{ 'addNew' |translate}}</button>
+            <button type="submit" class="btn btn-success" style="margin-right:10px;"
+              [disabled]="!personForm.form.valid">{{ 'save' |translate}}</button>
+            <button type="button" class="btn btn-primary" style="margin-right:10px;"
+              (click)="newPerson(); personForm.reset()">{{ 'addNew' |translate}}</button>
             <button type="button" class="btn btn-info" (click)="resetPerson()">{{ 'reset' |translate}}</button>
-          
+
           </div>
 
         </div>
@@ -32,7 +34,7 @@
             <div class="form-group">
               <label for="firstName">{{ 'personLabel.firstName' | translate}}
               </label>
-              <input type="text" class="form-control" id="firstName" required [(ngModel)]="personData.firstName"
+              <input type="text" maxlength="50" class="form-control" id="firstName" required [(ngModel)]="personData.firstName"
                 name="firstName" #firstName="ngModel">
               <div [hidden]="firstName.valid || firstName.pristine" class="alert alert-danger">
                 firstName is required
@@ -43,7 +45,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="form-group">
               <label for="lastName">{{ 'personLabel.lastName' | translate}}</label>
-              <input type="text" class="form-control" id="lastName" required [(ngModel)]="personData.lastName"
+              <input type="text" maxlength="50" class="form-control" id="lastName" required [(ngModel)]="personData.lastName"
                 name="lastName" #lastName="ngModel">
               <div [hidden]="lastName.valid || lastName.pristine" class="alert alert-danger">
                 Last Name is required
@@ -53,21 +55,20 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="form-group">
-              
+
               <label for="birthdate">{{ 'personLabel.birthdate' | translate}}</label><br>
-              <input type="text" readonly class="form-control datepicker" id="birthdate" required [(ngModel)]="personData.birthdate"
-                name="birthdate" #birthdate="ngModel"  data-date-format="mm/dd/yyyy">
-              <div [hidden]="birthdate.valid || birthdate.pristine" class="alert alert-danger">
-                Birth Date is required
-              </div>
+
+              <app-date-picker #birthdatepicker [model]="birthDateModel" (onChangeDate)="setValue('birthdate',$event)">
+              </app-date-picker>
+
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="form-group">
               <label for="taxId">{{ 'personLabel.taxId' | translate}}</label>
-              <input type="text" class="form-control" id="taxId" required [(ngModel)]="personData.taxId"
-                name="taxId" #taxId="ngModel">
+              <input type="text" class="form-control" id="taxId" required [(ngModel)]="personData.taxId" name="taxId"
+                #taxId="ngModel">
               <div [hidden]="taxId.valid || taxId.pristine" class="alert alert-danger">
                 Tax ID is required
               </div>
@@ -77,8 +78,8 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="form-group">
               <label for="generationSuffixCd">{{ 'personLabel.generationSuffixCd' | translate}}</label>
-              <input type="text" class="form-control" id="generationSuffixCd" required [(ngModel)]="personData.generationSuffixCd"
-                name="generationSuffixCd" #generationSuffixCd="ngModel">
+              <input type="text" class="form-control" id="generationSuffixCd" required
+                [(ngModel)]="personData.generationSuffixCd" name="generationSuffixCd" #generationSuffixCd="ngModel">
               <div [hidden]="generationSuffixCd.valid || generationSuffixCd.pristine" class="alert alert-danger">
                 Generation Suffix is required
               </div>
