--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
     <div class="header-container">
         <ul>
-            <li routerLink="/metadata">
+            <li routerLink="/metadata" style="cursor: pointer;">
                 Metadata
             </li>
             <li>
