--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,7 @@ div.header-container{
         border:1px solid white;
         margin-left:10px;
         padding:10px;
-        cursor: pointer;
+        cursor: default;
     }
 }
 
