--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,6 +14,7 @@
     <div class="col-sm-12">
         <app-person-table
             [persons]="persons"
+            (dataUpdated)="updateRecord($event)"
         >
         </app-person-table>
     </div>
