--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -1,12 +1,11 @@
 <div class="persons-table-container card-box">
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Display Name</th>
-                <th>Birth Date</th>
                 <th>Tax ID</th>
                 <th>Gen Suffix</th>
 
@@ -14,14 +13,12 @@
         </thead>
         <tbody>
             <tr 
-                (click)="selectPerson(person)" 
                 *ngFor="let person of persons;let i=index;"
                 [ngClass]="{'selected': person.selected}">
                 <td>{{person.rowidObject}}</td>
                 <td>{{person.firstName}}</td>
                 <td>{{person.lastName}}</td>
                 <td>{{person.displayName}}</td>
-                <td>{{person.birthdate}}</td>
                 <td>{{person.taxId}}</td>
                 <td>{{person.generationSuffixCd}}</td>
                
