--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -3,11 +3,11 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Display Name</th>
-                <th>Tax ID</th>
-                <th>Gen Suffix</th>
+                <th>{{'personLabel.firstName' | translate}}</th>
+                <th>{{'personLabel.lastName' | translate}}</th>
+                <th>{{'personLabel.displayName' | translate}}</th>
+                <th>{{'personLabel.taxId' | translate}}</th>
+                <th>{{'personLabel.generationSuffixCd' | translate}}</th>
 
             </tr>
         </thead>
